<resources>
    <string name="app_name">DevCode</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="name">Nombre</string>
    <string name="register">Registrarse</string>
    <string name="volver">Editar</string>
    <string name="button_register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="cedula">ID</string>
    <string name="password_register">Password</string>
    <string name="lookingForLevel">Buscar por Nivel</string>
    <string name="cambiarcontraseña">Ingrese nueva contraseña</string>
    <string name="cambiarcorreo">Ingrese nuevo correo</string>
    <string name="cambiarntelefono">Ingrese nuevo número de teléfono</string>
    <string name="actualizar">Actualizar Datos</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="home">Inicio</string>
    <string name="publicacion">Publicación</string>
    <string name="profile">Perfil</string>
    <string name="titulodelapublicacion">Título de la pregunta</string>
    <string name="detallesdelapregunta">Detalles de la pregunta</string>
    <string name="pregunta">pregunta</string>
    <string name="contenido">pregunta</string>
    <string name="respuesta">pregunta</string>
    <string name="savechanges">Guardar Cambios</string>
    <string name="salir">Cerrar sesión</string>
    <string name="help">Ayuda</string>
    <string name="publicar">Enviar</string>
    <string name="mensajeUsuario">Mensaje del usuario</string>
    <string name="editar">editar</string>
    <string name="eliminar">eliminar</string>
    <string name="denunciar">denunciar</string>
    <string name="si">Aceptar</string>
    <string name="no">Salir</string>
    <string name="advertencia">Esta seguro de eliminar</string>
    <string name="selecccionarNivel">Seleccione el nivel</string>
    <string name="cancel">Cancelar</string>
    <string name="nivel">nivel</string>
    <string name="tituloDenuncia">Mensaje denunciado</string>
    <string name="CantidadDenuncia">Cantidad de denuncias</string>
    <string name="denunciasAdmin">Denuncias Globales</string>
    <string name="sendde">Enviar denuncia</string>
    <string name="points">Mis puntos</string>
    <string name="quantityLikes">Likes faltantes</string>
    <string name="seleciona">Seleciona</string>
    <string name="seleeccionarDenuncia">Seleccionar denuncia</string>
    <string name="enviardenuncia">ENVIAR DENUNCIA</string>
    <string-array name="nivel">
        <item>Nivel 1</item>
        <item>Nivel 2</item>
        <item>Nivel 3</item>
        <item>Nivel 4</item>
        <item>Nivel 5</item>
        <item>Nivel 6</item>
        <item>Nivel 7</item>
        <item>Nivel 8</item>
        <item>Nivel 9</item>
        <item>extras</item>
    </string-array>

    <string-array name="selecionaaccion">
        /////No recuerdo cuales denuncias habian que poner xd
        <item>nivel 1</item>
        <item>nivel 2</item>
        <item>nivel 3</item>
        <item>nivel 4</item>
    </string-array>



    <string name="accion">Seleciona accion de denuncia</string>
    <string name="BLoquear">BLoquear</string>
    <string name="desBloquear">Desbloquear</string>
    <string name="Rol">Rol</string>
</resources>
