<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorperfil"
    tools:context=".Editarperfildelusuario">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/fotodeprueba" />

    <EditText
        android:id="@+id/changepass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/cambiarcontraseña"
        android:backgroundTint="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/newcorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/cambiarcorreo"
        android:backgroundTint="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/newphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/cambiarntelefono"
        android:backgroundTint="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/btnEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/publicacion"
        android:background="@drawable/botonlogin"/>

</LinearLayout>


