<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".Activities.RegisterActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:gravity="center">
        <EditText
                android:id="@+id/nameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_marginTop="33dp"/>

        <EditText
                android:id="@+id/emailRegister"
                android:layout_width="match_parent"
                android:hint="@string/email"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="33dp"/>
        <EditText
                android:id="@+id/passRegister"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:layout_marginTop="33dp"/>
        <Spinner
                android:id="@+id/spinnerTypeUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnRegister"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
        android:drawableTint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"/>




</RelativeLayout>