<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:id="@+id/linePrincipal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical"
    tools:context=".Activities.DetailsPublicationsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayoutSendData"
            android:layout_marginBottom="10dp">
        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:id="@+id/linearLayoutDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grayWhite"
                    android:orientation="vertical">

                <LinearLayout android:layout_width="match_parent"
                              android:orientation="vertical"
                              android:layout_height="wrap_content">
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp">
                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="0dp"
                                android:text="@string/titulodelapublicacion"
                                android:layout_height="wrap_content"
                                android:layout_weight="10"
                                android:textSize="10dp"/>
                        <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/level"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/nivel"
                                android:textSize="10dp"/>
                        <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/date"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:gravity="center"
                                android:text="@string/nivel"
                                android:textSize="10dp"/>
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginLeft="10dp">
                        <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/nameUser"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/titulodelapublicacion"
                                android:textStyle="bold"
                                android:textColor="@color/Black"
                                android:layout_marginTop="5dp"/>
                        <ImageView
                                android:id="@+id/imgPublicat"
                                android:layout_marginTop="7dp"
                                android:scaleType="center"
                                android:layout_width="match_parent"
                                android:layout_height="250dp"/>
                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/detallesdelapregunta"
                                android:layout_marginTop="15dp"
                                android:textSize="10dp"/>
                        <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/details_publications"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/detallesdelapregunta"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="10dp"
                                android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
                <View android:layout_width="match_parent"
                      android:layout_height="0.4dp"
                android:background="@color/intro_title_color"/>


                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvCommentary"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>




    <LinearLayout
            android:id="@+id/linearLayoutSendData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentBottom="true">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageUser"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"/>

        <EditText
                android:id="@+id/postRespond"
                android:layout_width="0dp"
                android:layout_gravity="bottom"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

        <Button
                android:id="@+id/btnRespond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grayWhite"
                android:drawableTint="@color/colorPrimary"
                android:text="@string/publicar"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorPrimary"/>
    </LinearLayout>



</RelativeLayout>